# ProcessSimulator

./: .clangd  .gitignore  CMakeLists.txt  compile_commands.json
include/IO/: CSVExporter.h  InputReader.h  PathResolver.h  SimulationDefaults.h  VTKExporter.h
include/Materials/: Material.h
include/Mesh/: MeshCell.h  MeshGrid.h
include/Process/: Depositor.h  Etcher.h  Photolithography.h  ProcessSimulator.h  ProcessStep.h  RegionColumnIterator.h
input/: process.txt
output/: simulation_result.csv  simulation_result.vtk  simulation_result_geometry.vtk
src/: main.cpp
src/IO/: CSVExporter.cpp  InputReader.cpp  PathResolver.cpp  VTKExporter.cpp
src/Mesh/: MeshCell.cpp  MeshGrid.cpp
src/Process/: Depositor.cpp  Etcher.cpp  Photolithography.cpp  ProcessSimulator.cpp
tests/: test_simulator.cpp
